# portland

./: .atom-build.yml  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bfg
assets/img/oryx/uf_examples/: uf_example_2.tmx
assets/maps/: city.json  dialog.json  house.json  main.json  map.json  metroidvania.json  new_map.json  oryx16_house.json  oryx16_overworld.json  oryx16_town.json  oryx_overworld.json  oryx_town.json  overworld.json  pause.json  stats.json
assets/scripts/: game.chai  game.lua  helpers.chai  helpers.lua  main.lua  vania.lua
assets/sprites/: ammo.json  bat.json  character.json  fireball.json  hero.json  item.json  oryx_sprite.json  record.json  undead.json
cmake/: FindLua.cmake  FindSDL2.cmake  FindSDL2_image.cmake
docs/: index.md  mechanics.md  todo.md
scripts/: clangfmt  cppcheck  run  run.bat
src/: asset_manager.cpp  asset_manager.h  constants.h  controls.cpp  controls.h  dialog.cpp  dialog.h  engine.cpp  engine.h  log.cpp  log.h  main.cpp  map.cpp  map.h  progress_bar.cpp  progress_bar.h  quadtree.h  screen_manager.cpp  screen_manager.h  state.cpp  state.h  text.cpp  text.h  tileset.cpp  tileset.h  util.cpp  util.h
src/entities/: item.cpp  item.h  npc.cpp  npc.h  projectile.cpp  projectile.h  sprite.cpp  sprite.h
src/lib/selene/include/selene/: Obj.h  primitives.h
src/screens/: main_screen.cpp  main_screen.h  menu.cpp  menu.h  opening.cpp  opening.h  pause_menu.cpp  pause_menu.h  screen.h
src/visual/: console.cpp  console.h  dialog.cpp  dialog.h  progress_bar.cpp  progress_bar.h  text.cpp  text.h
